arm64: config: set PELT halflife to 16 ms

--- a/arch/arm64/configs/monet_defconfig
+++ b/arch/arm64/configs/monet_defconfig
@@ -26,6 +26,7 @@ CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
+CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_SCHED_TUNE=y
 CONFIG_CPUSET_ASSIST=y
 CONFIG_CPUSET_AUDIO_APP="1-2"
