--- a/arch/arm64/configs/monet_defconfig
+++ b/arch/arm64/configs/monet_defconfig
@@ -748,6 +748,7 @@ CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_FS_VERITY=y
 CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
 CONFIG_INCREMENTAL_FS=y
+CONFIG_EXFAT_FS=y
 CONFIG_QUOTA=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_QFMT_V2=y
